<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_colored"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:id="@+id/title_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/agane75_extra_bold"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="48sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desctitle_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_home"
                        android:fontFamily="@font/agane65_bold"
                        android:gravity="center"
                        android:text="let's syntax"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="28sp" />

                </RelativeLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:alignmentMode="alignMargins"
                    android:columnCount="2"
                    android:columnOrderPreserved="false"
                    android:rowCount="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/aboutTrigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:contentDescription="@string/about"
                                android:src="@drawable/about" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:fontFamily="@font/agane75_extra_bold"
                                android:text="@string/about"
                                android:textColor="#6f6f6f"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="32dp"
                                android:layout_height="1dp"
                                android:layout_margin="5dp"
                                android:background="@drawable/line_text_yellow" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_about"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="12sp" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/sourcesTrigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:contentDescription="@string/sources"
                                android:src="@drawable/sources" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:fontFamily="@font/agane75_extra_bold"
                                android:text="@string/sources"
                                android:textColor="#6f6f6f"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="32dp"
                                android:layout_height="1dp"
                                android:layout_margin="5dp"
                                android:background="@drawable/line_text_yellow" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_sources"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="12sp" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/blogTrigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:contentDescription="@string/blog"
                                android:src="@drawable/blog" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:fontFamily="@font/agane75_extra_bold"
                                android:text="@string/blog"
                                android:textColor="#6f6f6f"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="32dp"
                                android:layout_height="1dp"
                                android:layout_margin="5dp"
                                android:background="@drawable/line_text_yellow" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_blog"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="12sp" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/donationTrigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:contentDescription="@string/donate"
                                android:src="@drawable/donation" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:fontFamily="@font/agane75_extra_bold"
                                android:text="@string/donate"
                                android:textColor="#6f6f6f"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="32dp"
                                android:layout_height="1dp"
                                android:layout_margin="5dp"
                                android:background="@drawable/line_text_yellow" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/desc_donate"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="12sp" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </GridLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorWhite"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_button"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/agane55_roman"
                            android:text="My Social Media"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="32dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/clickedFacebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:fontFamily="@font/fontawesome_webfont"
                            android:text="@string/facebook"
                            android:textSize="48sp" />

                        <TextView
                            android:id="@+id/clickedInstagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:fontFamily="@font/fontawesome_webfont"
                            android:text="@string/instagram"
                            android:textSize="48sp" />

                        <TextView
                            android:id="@+id/clickedTwitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:fontFamily="@font/fontawesome_webfont"
                            android:text="@string/twitter"
                            android:textSize="48sp" />

                        <TextView
                            android:id="@+id/clickedTelegram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:fontFamily="@font/fontawesome_webfont"
                            android:text="@string/telegram"
                            android:textSize="48sp" />

                        <TextView
                            android:id="@+id/clickedGithub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:fontFamily="@font/fontawesome_webfont"
                            android:text="@string/github"
                            android:textSize="48sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_marginVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/myads_home">

                </com.google.android.gms.ads.AdView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/agane55_roman"
                    android:gravity="center"
                    android:text="@string/copyright" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>